--- a/socreport.bib
+++ b/socreport.bib
@@ -369,6 +369,20 @@
                   {http://papers.nips.cc/paper/7417-gradient-descent-for-spiking-neural-networks.pdf}
 }
 
+@incollection{NIPS2018_7892,
+  title           = {Neural Ordinary Differential Equations},
+  author          = {Chen, Ricky T. Q. and Rubanova, Yulia and Bettencourt,
+                  Jesse and Duvenaud, David K},
+  booktitle       = {Advances in Neural Information Processing Systems 31},
+  editor          = {S. Bengio and H. Wallach and H. Larochelle and K. Grauman
+                  and N. Cesa-Bianchi and R. Garnett},
+  pages           = {6571--6583},
+  year            = 2018,
+  publisher       = {Curran Associates, Inc.},
+  url             =
+                  {http://papers.nips.cc/paper/7892-neural-ordinary-differential-equations.pdf}
+}
+
 @article{SHRESTHA201733,
   title           = "Robust spike-train learning in spike-event based weight
                   update",
@@ -533,6 +547,20 @@
                   within the group."
 }
 
+@article{abbott99_lapic_introd_integ_and_fire,
+  author          = {L.F Abbott},
+  title           = {Lapicque's Introduction of the Integrate-And-Fire Model
+                  Neuron (1907)},
+  journal         = {Brain Research Bulletin},
+  volume          = 50,
+  number          = {5-6},
+  pages           = {303-304},
+  year            = 1999,
+  doi             = {10.1016/s0361-9230(99)00161-6},
+  url             = {https://doi.org/10.1016/s0361-9230(99)00161-6},
+  DATE_ADDED      = {Sun Mar 22 12:28:53 2020},
+}
+
 @article{aenugu19_reinf_learn_with_spikin_coagen,
   author          = {Aenugu, Sneha and Sharma, Abhishek and Yelamarthi,
                   Sasikiran and Hazan, Hananel and Thomas, Philip S. and Kozma,
@@ -605,6 +633,34 @@
   eprint          =
                   {https://robotics.sciencemag.org/content/4/32/eaax2198.full.pdf},
   journal         = {Science Robotics}
+}
+
+@article{blouw18_bench_keywor_spott_effic_neurom_hardw,
+  author          = {Blouw, Peter and Choo, Xuan and Hunsberger, Eric and
+                  Eliasmith, Chris},
+  title           = {Benchmarking Keyword Spotting Efficiency on Neuromorphic
+                  Hardware},
+  journal         = {CoRR},
+  year            = 2018,
+  url             = {http://arxiv.org/abs/1812.01739v2},
+  abstract        = {Using Intel's Loihi neuromorphic research chip and ABR's
+                  Nengo Deep Learning toolkit, we analyze the inference speed,
+                  dynamic power consumption, and energy cost per inference of a
+                  two-layer neural network keyword spotter trained to recognize
+                  a single phrase. We perform comparative analyses of this
+                  keyword spotter running on more conventional hardware devices
+                  including a CPU, a GPU, Nvidia's Jetson TX1, and the Movidius
+                  Neural Compute Stick. Our results indicate that for this
+                  inference application, Loihi outperforms all of these
+                  alternatives on an energy cost per inference basis while
+                  maintaining equivalent inference accuracy. Furthermore, an
+                  analysis of tradeoffs between network size, inference speed,
+                  and energy cost indicates that Loihi's comparative advantage
+                  over other low-power computing devices improves for larger
+                  networks.},
+  archivePrefix   = {arXiv},
+  eprint          = {1812.01739},
+  primaryClass    = {cs.LG},
 }
 
 @article{comsa19_tempor_codin_spikin_neural_networ,
@@ -689,6 +745,34 @@
   publisher       = {Prentice Hall}
 }
 
+@INPROCEEDINGS{dvsgesture,
+  author          = {A. {Amir} and B. {Taba} and D. {Berg} and T. {Melano} and
+                  J. {McKinstry} and C. D. {Nolfo} and T. {Nayak} and A.
+                  {Andreopoulos} and G. {Garreau} and M. {Mendoza} and J.
+                  {Kusnitz} and M. {Debole} and S. {Esser} and T. {Delbruck} and
+                  M. {Flickner} and D. {Modha}},
+  booktitle       = {2017 IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  title           = {A Low Power, Fully Event-Based Gesture Recognition System},
+  year            = 2017,
+  pages           = {7388-7397},
+  keywords        = {cameras;computer vision;gesture recognition;image
+                  sensors;low-power electronics;neural nets;asynchronous data
+                  representation;cameras;live DVS event stream;TrueNorth
+                  chip;TrueNorth neurosynaptic processor;Dynamic Vision
+                  Sensor;biologically inspired DVS;fixed frame rate;sparse data
+                  representation;hand gesture recognition;DVS dataset;low power
+                  fully event-based gesture recognition system;natively
+                  event-based processor;spiking neurons;convolutional neural
+                  network;CNN;illumination conditions;synchronous
+                  processors;time 105.0 ms;power 200.0
+                  mW;Cameras;Neurons;Gesture recognition;Voltage
+                  control;Real-time systems;Sensors;Feature extraction},
+  doi             = {10.1109/CVPR.2017.781},
+  ISSN            = {1063-6919},
+  month           = {July},
+}
+
 @article{fitzhugh1955mathematical,
   title           = {Mathematical models of threshold phenomena in the nerve
                   membrane},
@@ -741,6 +825,30 @@
   organization    = {IEEE}
 }
 
+@article{gerstner2001framework,
+  title           = {A framework for spiking neuron models-the spike response
+                  model},
+  author          = {Gerstner, Wulfram},
+  journal         = {Handbook of Biological Physics},
+  volume          = 4,
+  number          = {BOOK\_CHAP},
+  pages           = {469--516},
+  year            = 2001,
+  publisher       = {Elsevier}
+}
+
+@article{grossberg1987competitive,
+  title           = {Competitive learning: From interactive activation to
+                  adaptive resonance},
+  author          = {Grossberg, Stephen},
+  journal         = {Cognitive science},
+  volume          = 11,
+  number          = 1,
+  pages           = {23--63},
+  year            = 1987,
+  publisher       = {Elsevier}
+}
+
 @article{guetig14_to_spike_or_when_to_spike,
   author          = {Robert G{\"u}tig},
   title           = {To Spike, Or When To Spike?},
@@ -752,6 +860,13 @@
   doi             = {10.1016/j.conb.2014.01.004},
   url             = {https://doi.org/10.1016/j.conb.2014.01.004},
   DATE_ADDED      = {Fri Nov 1 16:23:04 2019},
+}
+
+@book{hebb1949organization,
+  title           = {The organization of behavior: a neuropsychological theory},
+  author          = {Hebb, Donald Olding},
+  year            = 1949,
+  publisher       = {J. Wiley; Chapman \& Hall}
 }
 
 @article{heeger2000poisson,
@@ -826,6 +941,59 @@
   publisher       = {Ieee}
 }
 
+@article{jolivet04_gener_integ_and_fire_model,
+  author          = {Renaud Jolivet and Timothy J. Lewis and Wulfram Gerstner},
+  title           = {Generalized Integrate-And-Fire Models of Neuronal Activity
+                  Approximate Spike Trains of a Detailed Model To a High Degree
+                  of Accuracy},
+  journal         = {Journal of Neurophysiology},
+  volume          = 92,
+  number          = 2,
+  pages           = {959-976},
+  year            = 2004,
+  doi             = {10.1152/jn.00190.2004},
+  url             = {https://doi.org/10.1152/jn.00190.2004},
+  DATE_ADDED      = {Sun Mar 22 18:02:35 2020},
+}
+
+@article{kaiser18_synap_plast_dynam_deep_contin,
+  author          = {Kaiser, Jacques and Mostafa, Hesham and Neftci, Emre},
+  title           = {Synaptic Plasticity Dynamics for Deep Continuous Local
+                  Learning (DECOLLE)},
+  journal         = {CoRR},
+  year            = 2018,
+  url             = {http://arxiv.org/abs/1811.10766v3},
+  abstract        = {A growing body of work underlines striking similarities
+                  between biological neural networks and recurrent, binary
+                  neural networks. A relatively smaller body of work, however,
+                  discusses similarities between learning dynamics employed in
+                  deep artificial neural networks and synaptic plasticity in
+                  spiking neural networks. The challenge preventing this is
+                  largely caused by the discrepancy between the dynamical
+                  properties of synaptic plasticity and the requirements for
+                  gradient backpropagation. Learning algorithms that approximate
+                  gradient backpropagation using locally synthesized gradients
+                  can overcome this challenge. Here, we show that synthetic
+                  gradients enable the derivation of Deep Continuous Local
+                  Learning (DECOLLE) in spiking neural networks. DECOLLE is
+                  capable of learning deep spatio-temporal representations from
+                  spikes relying solely on local information. Synaptic
+                  plasticity rules are derived systematically from user-defined
+                  cost functions and neural dynamics by leveraging existing
+                  autodifferentiation methods of machine learning frameworks. We
+                  benchmark our approach on the MNIST and the event-based
+                  neuromorphic DvsGesture dataset, on which DECOLLE performs
+                  comparably to the state-of-the-art. DECOLLE networks provide
+                  continuously learning machines that are relevant to biology
+                  and supportive of event-based, low-power computer vision
+                  architectures matching the accuracies of conventional
+                  computers on tasks where temporal precision and speed are
+                  essential.},
+  archivePrefix   = {arXiv},
+  eprint          = {1811.10766},
+  primaryClass    = {cs.NE},
+}
+
 @InProceedings{ klaus_greff-proc-scipy-2017,
   author          = { {K}laus {G}reff and {A}aron {K}lein and {M}artin
                   {C}hovanec and {F}rank {H}utter and {J}\"urgen {S}chmidhuber },
@@ -838,6 +1006,21 @@
   editor          = { {K}aty {H}uff and {D}avid {L}ippa and {D}illon {N}iederhut
                   and {M} {P}acer },
   doi             = { 10.25080/shinma-7f4c6e7-008 }
+}
+
+@article{legenstein08_learn_theor_rewar_modul_spike,
+  author          = {Robert Legenstein and Dejan Pecevski and Wolfgang Maass},
+  title           = {A Learning Theory for Reward-Modulated
+                  Spike-Timing-Dependent Plasticity With Application To
+                  Biofeedback},
+  journal         = {PLoS Computational Biology},
+  volume          = 4,
+  number          = 10,
+  pages           = {e1000180},
+  year            = 2008,
+  doi             = {10.1371/journal.pcbi.1000180},
+  url             = {https://doi.org/10.1371/journal.pcbi.1000180},
+  DATE_ADDED      = {Sun Mar 22 23:10:21 2020},
 }
 
 @inproceedings{levine2017handeye,
@@ -947,6 +1130,36 @@
   year            = 2019,
 }
 
+@article{orchard15_conver_static_image_datas_to,
+  author          = {Garrick Orchard and Ajinkya Jayawant and Gregory K. Cohen
+                  and Nitish Thakor},
+  title           = {Converting Static Image Datasets To Spiking Neuromorphic
+                  Datasets Using Saccades},
+  journal         = {Frontiers in Neuroscience},
+  volume          = 9,
+  number          = {nil},
+  pages           = {nil},
+  year            = 2015,
+  doi             = {10.3389/fnins.2015.00437},
+  url             = {https://doi.org/10.3389/fnins.2015.00437},
+  DATE_ADDED      = {Mon Mar 23 02:37:53 2020},
+}
+
+@inproceedings{pavlidisil_spikin,
+  author          = {N.G. Pavlidis and O.K. Tasoulis and V.P. Plagianakos and G.
+                  Nikiforidis and M.N. Vrahatis},
+  title           = {Spiking neural network training using evolutionary
+                  algorithms},
+  booktitle       = {Proceedings. 2005 IEEE International Joint Conference on
+                  Neural Networks, 2005.},
+  year            = {nil},
+  pages           = {nil},
+  doi             = {10.1109/ijcnn.2005.1556240},
+  url             = {https://doi.org/10.1109/ijcnn.2005.1556240},
+  DATE_ADDED      = {Mon Mar 23 00:20:31 2020},
+  month           = {-},
+}
+
 @article{pfeiffer2018deep,
   title           = {Deep learning with spiking neurons: opportunities and
                   challenges},
@@ -955,6 +1168,21 @@
   volume          = 12,
   year            = 2018,
   publisher       = {Frontiers Media SA}
+}
+
+@article{pfister06_optim_spike_timin_depen_plast,
+  author          = {Jean-Pascal Pfister and Taro Toyoizumi and David Barber and
+                  Wulfram Gerstner},
+  title           = {Optimal Spike-Timing-Dependent Plasticity for Precise
+                  Action Potential Firing in Supervised Learning},
+  journal         = {Neural Computation},
+  volume          = 18,
+  number          = 6,
+  pages           = {1318-1348},
+  year            = 2006,
+  doi             = {10.1162/neco.2006.18.6.1318},
+  url             = {https://doi.org/10.1162/neco.2006.18.6.1318},
+  DATE_ADDED      = {Mon Mar 23 01:38:10 2020},
 }
 
 @InProceedings{pmlr-v89-o-connor19a,
@@ -1057,19 +1285,6 @@
   journal         = {ESANN}
 }
 
-article{urbanczik09_gradien_learn_rule_tempot,
-  author          = {Robert Urbanczik and Walter Senn},
-  title           = {A Gradient Learning Rule for the Tempotron},
-  journal         = {Neural Computation},
-  volume          = 21,
-  number          = 2,
-  pages           = {340-352},
-  year            = 2009,
-  doi             = {10.1162/neco.2008.09-07-605},
-  url             = {https://doi.org/10.1162/neco.2008.09-07-605},
-  DATE_ADDED      = {Fri Nov 1 16:00:33 2019},
-}
-
 @article{stemmler1996single,
   title           = {A single spike suffices: the simplest form of stochastic
                   resonance in model neurons},
@@ -1096,6 +1311,53 @@ article{urbanczik09_gradien_learn_rule_tempot,
   DATE_ADDED      = {Sat Nov 2 19:32:20 2019},
 }
 
+@article{such17_deep_neuroev,
+  author          = {Such, Felipe Petroski and Madhavan, Vashisht and Conti,
+                  Edoardo and Lehman, Joel and Stanley, Kenneth O. and Clune,
+                  Jeff},
+  title           = {Deep Neuroevolution: Genetic Algorithms Are a Competitive
+                  Alternative for Training Deep Neural Networks for
+                  Reinforcement Learning},
+  journal         = {CoRR},
+  year            = 2017,
+  url             = {http://arxiv.org/abs/1712.06567v3},
+  abstract        = {Deep artificial neural networks (DNNs) are typically
+                  trained via gradient-based learning algorithms, namely
+                  backpropagation. Evolution strategies (ES) can rival
+                  backprop-based algorithms such as Q-learning and policy
+                  gradients on challenging deep reinforcement learning (RL)
+                  problems. However, ES can be considered a gradient-based
+                  algorithm because it performs stochastic gradient descent via
+                  an operation similar to a finite-difference approximation of
+                  the gradient. That raises the question of whether
+                  non-gradient-based evolutionary algorithms can work at DNN
+                  scales. Here we demonstrate they can: we evolve the weights of
+                  a DNN with a simple, gradient-free, population-based genetic
+                  algorithm (GA) and it performs well on hard deep RL problems,
+                  including Atari and humanoid locomotion. The Deep GA
+                  successfully evolves networks with over four million free
+                  parameters, the largest neural networks ever evolved with a
+                  traditional evolutionary algorithm. These results (1) expand
+                  our sense of the scale at which GAs can operate, (2) suggest
+                  intriguingly that in some cases following the gradient is not
+                  the best choice for optimizing performance, and (3) make
+                  immediately available the multitude of neuroevolution
+                  techniques that improve performance. We demonstrate the latter
+                  by showing that combining DNNs with novelty search, which
+                  encourages exploration on tasks with deceptive or sparse
+                  reward functions, can solve a high-dimensional problem on
+                  which reward-maximizing algorithms (e.g.\ DQN, A3C, ES, and
+                  the GA) fail. Additionally, the Deep GA is faster than ES,
+                  A3C, and DQN (it can train Atari in
+                  ${\raise.17ex\hbox{$\scriptstyle\sim$}}$4 hours on one desktop
+                  or ${\raise.17ex\hbox{$\scriptstyle\sim$}}$1 hour distributed
+                  on 720 cores), and enables a state-of-the-art, up to
+                  10,000-fold compact encoding technique.},
+  archivePrefix   = {arXiv},
+  eprint          = {1712.06567},
+  primaryClass    = {cs.NE},
+}
+
 @online{tds_artif_biolog_neural_networ,
   author          = {Richard Nagyfi},
   title           = {The differences between Artificial and Biological Neural
@@ -1104,6 +1366,20 @@ article{urbanczik09_gradien_learn_rule_tempot,
                   {https://towardsdatascience.com/the-differences-between-artificial-and-biological-neural-networks-a8b46db828b7},
   urldate         = {Online; accessed 21 March 2020},
   year            = 2018,
+}
+
+@article{teka14_neuron_spike_timin_adapt_descr,
+  author          = {Wondimu Teka and Toma M. Marinov and Fidel Santamaria},
+  title           = {Neuronal Spike Timing Adaptation Described With a
+                  Fractional Leaky Integrate-And-Fire Model},
+  journal         = {PLoS Computational Biology},
+  volume          = 10,
+  number          = 3,
+  pages           = {e1003526},
+  year            = 2014,
+  doi             = {10.1371/journal.pcbi.1003526},
+  url             = {https://doi.org/10.1371/journal.pcbi.1003526},
+  DATE_ADDED      = {Sun Mar 22 12:30:30 2020},
 }
 
 @article{thorpe2001spike,
@@ -1126,4 +1402,105 @@ article{urbanczik09_gradien_learn_rule_tempot,
   volume          = 10,
   journal         = {Frontiers in Neuroscience},
   doi             = {10.3389/fnins.2016.00508}
+}
+
+@article{urbanczik09_gradien_learn_rule_tempot,
+  author          = {Robert Urbanczik and Walter Senn},
+  title           = {A Gradient Learning Rule for the Tempotron},
+  journal         = {Neural Computation},
+  volume          = 21,
+  number          = 2,
+  pages           = {340-352},
+  year            = 2009,
+  doi             = {10.1162/neco.2008.09-07-605},
+  url             = {https://doi.org/10.1162/neco.2008.09-07-605},
+  DATE_ADDED      = {Fri Nov 1 16:00:33 2019},
+}
+
+@article{victor05_spike_train_metric,
+  author          = {Jonathan D Victor},
+  title           = {Spike Train Metrics},
+  journal         = {Current Opinion in Neurobiology},
+  volume          = 15,
+  number          = 5,
+  pages           = {585-592},
+  year            = 2005,
+  doi             = {10.1016/j.conb.2005.08.002},
+  url             = {https://doi.org/10.1016/j.conb.2005.08.002},
+  DATE_ADDED      = {Mon Mar 23 21:36:50 2020},
+}
+
+@article{zambrano16_fast_effic_async_neural_comput,
+  author          = {Zambrano, Davide and Bohte, Sander M.},
+  title           = {Fast and Efficient Asynchronous Neural Computation With
+                  Adapting Spiking Neural Networks},
+  journal         = {CoRR},
+  year            = 2016,
+  url             = {http://arxiv.org/abs/1609.02053v1},
+  abstract        = {Biological neurons communicate with a sparing exchange of
+                  pulses - spikes. It is an open question how real spiking
+                  neurons produce the kind of powerful neural computation that
+                  is possible with deep artificial neural networks, using only
+                  so very few spikes to communicate. Building on recent insights
+                  in neuroscience, we present an Adapting Spiking Neural Network
+                  (ASNN) based on adaptive spiking neurons. These spiking
+                  neurons efficiently encode information in spike-trains using a
+                  form of Asynchronous Pulsed Sigma-Delta coding while
+                  homeostatically optimizing their firing rate. In the proposed
+                  paradigm of spiking neuron computation, neural adaptation is
+                  tightly coupled to synaptic plasticity, to ensure that
+                  downstream neurons can correctly decode upstream spiking
+                  neurons. We show that this type of network is inherently able
+                  to carry out asynchronous and event-driven neural computation,
+                  while performing identical to corresponding artificial neural
+                  networks (ANNs). In particular, we show that these adaptive
+                  spiking neurons can be drop in replacements for ReLU neurons
+                  in standard feedforward ANNs comprised of such units. We
+                  demonstrate that this can also be successfully applied to a
+                  ReLU based deep convolutional neural network for classifying
+                  the MNIST dataset. The ASNN thus outperforms current Spiking
+                  Neural Networks (SNNs) implementations, while responding (up
+                  to) an order of magnitude faster and using an order of
+                  magnitude fewer spikes. Additionally, in a streaming setting
+                  where frames are continuously classified, we show that the
+                  ASNN requires substantially fewer network updates as compared
+                  to the corresponding ANN.},
+  archivePrefix   = {arXiv},
+  eprint          = {1609.02053v1},
+  primaryClass    = {cs.NE},
+}
+
+@article{zenke17_super,
+  author          = {Zenke, Friedemann and Ganguli, Surya},
+  title           = {Superspike: Supervised Learning in Multi-Layer Spiking
+                  Neural Networks},
+  journal         = {CoRR},
+  year            = 2017,
+  url             = {http://arxiv.org/abs/1705.11146v2},
+  abstract        = {A vast majority of computation in the brain is performed by
+                  spiking neural networks. Despite the ubiquity of such spiking,
+                  we currently lack an understanding of how biological spiking
+                  neural circuits learn and compute in-vivo, as well as how we
+                  can instantiate such capabilities in artificial spiking
+                  circuits in-silico. Here we revisit the problem of supervised
+                  learning in temporally coding multi-layer spiking neural
+                  networks. First, by using a surrogate gradient approach, we
+                  derive SuperSpike, a nonlinear voltage-based three factor
+                  learning rule capable of training multi-layer networks of
+                  deterministic integrate-and-fire neurons to perform nonlinear
+                  computations on spatiotemporal spike patterns. Second,
+                  inspired by recent results on feedback alignment, we compare
+                  the performance of our learning rule under different credit
+                  assignment strategies for propagating output errors to hidden
+                  units. Specifically, we test uniform, symmetric and random
+                  feedback, finding that simpler tasks can be solved with any
+                  type of feedback, while more complex tasks require symmetric
+                  feedback. In summary, our results open the door to obtaining a
+                  better scientific understanding of learning and computation in
+                  spiking neural networks by advancing our ability to train them
+                  to solve nonlinear problems involving transformations between
+                  different spatiotemporal spike-time patterns.},
+  archivePrefix   = {arXiv},
+  eprint          = {1705.11146},
+  primaryClass    = {q-bio.NC},
 }
